tests/dataset/tpc-ds/compiler/kotlin/q29.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q29.kt:46:12: error: redeclaration: Store
data class Store(var s_store_sk: Int, var s_store_id: String, var s_store_name: String)
           ^
/tmp/q29.kt:48:12: error: redeclaration: Item
data class Item(var i_item_sk: Int, var i_item_id: String, var i_item_desc: String)
           ^
/tmp/q29.kt:54:12: error: redeclaration: Item
data class Item(var i_item_sk: Int, var i_item_id: String, var i_item_desc: String)
           ^
/tmp/q29.kt:56:12: error: redeclaration: Store
data class Store(var s_store_sk: Int, var s_store_id: String, var s_store_name: String)
           ^
/tmp/q29.kt:131:19: error: type mismatch: inferred type is Int? but Int was expected
        __res.add((x as MutableMap<String, Int>)["ss_quantity"])
                  ^
/tmp/q29.kt:137:19: error: type mismatch: inferred type is Int? but Int was expected
        __res.add((x as MutableMap<String, Int>)["sr_return_quantity"])
                  ^
/tmp/q29.kt:143:19: error: type mismatch: inferred type is Int? but Int was expected
        __res.add((x as MutableMap<String, Int>)["cs_quantity"])
                  ^
