tests/dataset/tpc-ds/compiler/kotlin/q29.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-15T07:22:48Z
fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}

fun json(v: Any?) {
    println(toJson(v))
}

fun toJson(v: Any?): String = when (v) {
    null -> "null"
    is String -> "\"" + v.replace("\"", "\\\"") + "\""
    is Boolean, is Number -> v.toString()
    is Map<*, *> -> v.entries.joinToString(prefix = "{", postfix = "}") { toJson(it.key.toString()) + ":" + toJson(it.value) }
    is Iterable<*> -> v.joinToString(prefix = "[", postfix = "]") { toJson(it) }
    else -> toJson(v.toString())
}

class Group<K, T>(val key: K, val items: MutableList<T>) : MutableList<T> by items
// Code generated from q29.mochi

data class StoreSale(var ss_sold_date_sk: Int, var ss_item_sk: Int, var ss_store_sk: Int, var ss_customer_sk: Int, var ss_quantity: Int, var ss_ticket_number: Int)

data class StoreReturn(var sr_returned_date_sk: Int, var sr_item_sk: Int, var sr_customer_sk: Int, var sr_ticket_number: Int, var sr_return_quantity: Int)

data class CatalogSale(var cs_sold_date_sk: Int, var cs_item_sk: Int, var cs_bill_customer_sk: Int, var cs_quantity: Int)

data class DateDim(var d_date_sk: Int, var d_moy: Int, var d_year: Int)

data class Store(var s_store_sk: Int, var s_store_id: String, var s_store_name: String)

data class Item(var i_item_sk: Int, var i_item_id: String, var i_item_desc: String)

data class Catalog_sale(var cs_sold_date_sk: Int, var cs_item_sk: Int, var cs_bill_customer_sk: Int, var cs_quantity: Int)

data class Date_dim(var d_date_sk: Int, var d_moy: Int, var d_year: Int)

data class Item(var i_item_sk: Int, var i_item_id: String, var i_item_desc: String)

data class Store(var s_store_sk: Int, var s_store_id: String, var s_store_name: String)

data class Store_return(var sr_returned_date_sk: Int, var sr_item_sk: Int, var sr_customer_sk: Int, var sr_ticket_number: Int, var sr_return_quantity: Int)

data class Store_sale(var ss_sold_date_sk: Int, var ss_item_sk: Int, var ss_store_sk: Int, var ss_customer_sk: Int, var ss_quantity: Int, var ss_ticket_number: Int)

val store_sales = mutableListOf(Store_sale(ss_sold_date_sk = 1, ss_item_sk = 1, ss_store_sk = 1, ss_customer_sk = 1, ss_quantity = 10, ss_ticket_number = 1))

val store_returns = mutableListOf(Store_return(sr_returned_date_sk = 2, sr_item_sk = 1, sr_customer_sk = 1, sr_ticket_number = 1, sr_return_quantity = 2))

val catalog_sales = mutableListOf(Catalog_sale(cs_sold_date_sk = 3, cs_item_sk = 1, cs_bill_customer_sk = 1, cs_quantity = 5))

val date_dim = mutableListOf(Date_dim(d_date_sk = 1, d_moy = 4, d_year = 1999), Date_dim(d_date_sk = 2, d_moy = 5, d_year = 1999), Date_dim(d_date_sk = 3, d_moy = 5, d_year = 2000))

val store = mutableListOf(Store(s_store_sk = 1, s_store_id = "S1", s_store_name = "Store1"))

val item = mutableListOf(Item(i_item_sk = 1, i_item_id = "ITEM1", i_item_desc = "Desc1"))

val base = run {
    val __res = mutableListOf<Any?>()
    for (ss in store_sales) {
        for (sr in store_returns) {
            if (ss.ss_ticket_number == sr.sr_ticket_number && ss.ss_item_sk == sr.sr_item_sk) {
                for (cs in catalog_sales) {
                    if (sr.sr_customer_sk == cs.cs_bill_customer_sk && sr.sr_item_sk == cs.cs_item_sk) {
                        for (d1 in date_dim) {
                            if (d1.d_date_sk == ss.ss_sold_date_sk) {
                                for (d2 in date_dim) {
                                    if (d2.d_date_sk == sr.sr_returned_date_sk) {
                                        for (d3 in date_dim) {
                                            if (d3.d_date_sk == cs.cs_sold_date_sk) {
                                                for (s in store) {
                                                    if (s.s_store_sk == ss.ss_store_sk) {
                                                        for (i in item) {
                                                            if (i.i_item_sk == ss.ss_item_sk) {
                                                                if (d1.d_moy == 4 && d1.d_year == 1999 && d2.d_moy >= 4 && d2.d_moy <= 7 && d3.d_year in mutableListOf(1999, 2000, 2001)) {
                                                                    __res.add(mutableMapOf("ss_quantity" to ss.ss_quantity, "sr_return_quantity" to sr.sr_return_quantity, "cs_quantity" to cs.cs_quantity, "i_item_id" to i.i_item_id, "i_item_desc" to i.i_item_desc, "s_store_id" to s.s_store_id, "s_store_name" to s.s_store_name))
                                                                }
                                                            }
                                                        }
                                                    }
                                                }
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
    __res
}

val result = run {
    val __groups = mutableMapOf<MutableMap<String, Any?>, Group<MutableMap<String, Any?>, MutableMap<String, Int>>>()
    val __order = mutableListOf<MutableMap<String, Any?>>()
    for (b in base) {
        val __k = (mutableMapOf("item_id" to (b as MutableMap<String, Int>)["i_item_id"], "item_desc" to (b as MutableMap<String, Int>)["i_item_desc"], "s_store_id" to (b as MutableMap<String, Int>)["s_store_id"], "s_store_name" to (b as MutableMap<String, Int>)["s_store_name"]) as MutableMap<String, Any?>)
        var __g = __groups[__k]
        if (__g == null) {
            __g = Group(__k, mutableListOf<MutableMap<String, Int>>())
            __groups[__k] = __g
            __order.add(__k)
        }
        __g.add(b)
    }
    val __res = mutableListOf<Any?>()
    for (k in __order) {
        val g = __groups[k]!!
        __res.add(mutableMapOf("i_item_id" to (g.key as MutableMap<String, Any?>)["item_id"], "i_item_desc" to (g.key as MutableMap<String, Any?>)["item_desc"], "s_store_id" to (g.key as MutableMap<String, Any?>)["s_store_id"], "s_store_name" to (g.key as MutableMap<String, Any?>)["s_store_name"], "store_sales_quantity" to sum(run {
    val __res = mutableListOf<Int>()
    for (x in g) {
        __res.add((x as MutableMap<String, Int>)["ss_quantity"])
    }
    __res
}), "store_returns_quantity" to sum(run {
    val __res = mutableListOf<Int>()
    for (x in g) {
        __res.add((x as MutableMap<String, Int>)["sr_return_quantity"])
    }
    __res
}), "catalog_sales_quantity" to sum(run {
    val __res = mutableListOf<Int>()
    for (x in g) {
        __res.add((x as MutableMap<String, Int>)["cs_quantity"])
    }
    __res
})))
    }
    __res
}

fun main() {
    json(result)
}
